@@ -1,3 +1,9 @@
+2003-05-05  Gary Thomas  <gary@mlbassoc.com>
+
+	* tests/tm_basic.cxx: Support new option controlling number of times
+	this test runs.  This is useful for long-term stress and performance
+	analysis.
+
 2003-05-03  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* include/mqueue.inl (Cyg_Mqueue::get): Fix invalid loop termination
